store/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store
  labels:
    app: store
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: xdew-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - store.kooked.app
      secretName: store-tls
  rules:
    - host: store.kooked.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store
                port:
                  number: 80
